--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
         <object data="images/resume.pdf" type="application/pdf" width="100%" height="750">
  
   <p>It appears you don't have a PDF plugin for this browser.
-  No biggie... you can <a href="images/resume.pdf">click here to
+  You can <a href="images/resume.pdf">click here to
   download the PDF file. (167 KB) </a></p>
   
 </object>
