--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </p>
         
         <p>    
-            I'm currently a Psychology Major at the University of Florida, with a Pre-Law track. I am deeply rooted in my Cuban roots,  which is refelcted in both my cooking and in my dancing! I'm the Vice-President of the Gator Salsa Club on campus doubling as an instructor. Writing is also a passion of mine, with personal dabbles in poetry and prose. I'm also an avid gamer, playing games such as League of Legends at a near professional level. To learn more about my hobbies, click <a href="hobbies.html">here</a>!      
+            I'm currently a Psychology Major at the University of Florida, with a Pre-Law track. I am deeply rooted in my Cuban roots,  which is reflected in both my cooking and in my dancing! I'm the Vice-President of the Gator Salsa Club on campus doubling as an instructor. Writing is also a passion of mine, with personal dabbles in poetry and prose. I'm also an avid gamer, playing games such as League of Legends at a near professional level. To learn more about my hobbies, click <a href="hobbies.html">here</a>!      
         </p>
         
         <img src="images/profile-2.gif" title="Javier just doing what he loves" width:"100%" alt="Javier just doing what he loves">
