--- a/resume.html
+++ b/resume.html
@@ -39,8 +39,9 @@
         <a href="images/resume.pdf" target="_blank">PDF (167 KB)</a>         
         </p>   
            
-        <p>
-        <object data="images/resume.pdf" type="application/pdf" width="100%" height="750">
+        <div id="resume">
+        <object data="images/resume.pdf" type="application/pdf" width="100%" height="750px">
+            </div>
  
   <p>It appears you don't have a PDF plugin for this browser.
   You can <a href="images/resume.pdf">click here to
