Prep for final additions

--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,8 @@
             <a href="resume.html">Resume</a>
             <a href="culture.html">Culture</a>
             <a href="hobbies.html">Hobbies</a>
+            <a href="interview.html">Interview</a>
+            <a href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
         </div>
     </div>
@@ -56,6 +58,8 @@
             <a href="resume.html">Resume</a>
             <a href="culture.html">Culture</a>
             <a href="hobbies.html">Hobbies</a>
+            <a href="interview.html">Interview</a>
+            <a href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
         
         </div>
