--- a/culture.html
+++ b/culture.html
@@ -25,6 +25,8 @@
             <a href="resume.html">Resume</a>
             <a href="culture.html">Culture</a>
             <a href="hobbies.html">Hobbies</a>
+            <a href="interview.html">Interview</a>
+            <a href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
         </div>
 </div>
@@ -72,6 +74,8 @@
             <a href="resume.html">Resume</a>
             <a href="culture.html">Culture</a>
             <a href="hobbies.html">Hobbies</a>
+            <a href="interview.html">Interview</a>
+            <a href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
         
         </div>
