--- a/hobbies.html
+++ b/hobbies.html
@@ -24,6 +24,8 @@
             <a href="resume.html">Resume</a>
             <a href="culture.html">Culture</a>
             <a href="hobbies.html">Hobbies</a>
+            <a href="interview.html">Interview</a>
+            <a href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
         </div>
     </div>
@@ -85,6 +87,8 @@
             <a href="resume.html">Resume</a>
             <a href="culture.html">Culture</a>
             <a href="hobbies.html">Hobbies</a>
+            <a href="interview.html">Interview</a>
+            <a href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
         
         </div>
