More interview stuff

--- a/interview.html
+++ b/interview.html
@@ -59,7 +59,7 @@
     </p>
     
     <p>
-    Below is the interview.
+    Below is an interview with Justin.
     </p>
     
 <div id="interview_text">
@@ -118,17 +118,17 @@
 <p>JG: Well now that seasons 3 has ended, what are your prospects for season 4?</p>
 <p>JR: Well, first it's getting used to the new changes. Patch 3.14 I think it was.</p>
 <p>JG: Patch Pi?</p>
-<p>JR: Haha, yeah. Patch Pi. They really should've made the health pots into pies. I don't know why we didn't.</p>
+<p>JR: Haha, yeah. Patch Pi. They really should've made the health pots into pies. I don't know why they didn't.</p>
 <p>JG: We got biscuits instead.</p>
 <p>JR: Eh, close enough. But it's really different. I'm still debating whether I want to keep playing seriously, mainly since Team Sparkle is starting to break up. </p>
 <p>JG: Team... Sparkle?</p>
-<p>JR: Oh, I never mentioned our name! Yeah, Team Sparkle. It started when we tried out Heroes of Newerth and we came up with a team name from two randomly generated words: "Spanky Inhibition." And when you put the two together for a team name it was sort of like "SPKL" and it looked like "Sparkle" so we became Team Sparkle. And we even had a chant, how'd it go...?</p>
+<p>JR: Oh, I never mentioned our name! Yeah, Team Sparkle. It started when we tried out Heroes of Newerth and we came up with a team name from two randomly generated words: "Spanky Inhibition." And when you put the two together for a team name it was sort of like "SPKL," and it looked like "Sparkle," so we became Team Sparkle. And we even had a chant, how'd it go...?</p>
 <p>JG: I got to hear this.</p>
-<p>JR: Sparkle, sparkle through the night. Sparkle, sparkle, oh so bright. Something... something... Go Team Sparkle... It was really dumb, but we'd always say it in between games. And we all moved into the condo we even named it the Sparkle House. </p>
+<p>JR: Sparkle, sparkle through the night. Sparkle, sparkle, oh so bright. Something... something... Go Team Sparkle... It was really dumb, but we'd always say it in between games. And when we all moved into the condo we even named it the Sparkle House. </p>
 <p>JG: Uh... Well then... But the team's breaking up?</p>
 <p>JR: Yeah, we lost a few players. I did pick up a few high ELO people for a GatorLAN and we won, but Team Sparkle is falling apart. </p>
 <p>JG: How's that going to affect seasons 4 for you?</p>
-<p>JR: I mean as a team I don't think it's going to pick up again, with all of us in our later years of college starting to get busier, but I feel that when I have time, and if I feel ready, I'll be ready to tackle season 4. I might do GatorLAn, if the prizes get better, haha. But I haven't thought about it too much, since the new patch is pretty tough to get used to. Like the new trinkets? The hotkeys for that still mess me up.</p>
+<p>JR: I mean as a team I don't think it's going to pick up again, with all of us in our later years of college and we're starting to get busier, but I feel that when I have time, and if I feel ready, I'll be ready to tackle season 4. I might do GatorLAN, if the prizes get better, haha. But I haven't thought about it too much, since the new patch is pretty tough to get used to. Like the new trinkets? The hotkeys for that still mess me up.</p>
 <p>JG: Well I showed you my videos about the patch, so I can help you with the changes if you need it.</p>
 <p>JR: Haha, sounds like a plan.</p>
 <p>JG: Alright Justin! Thanks for opening up and telling us all about your experiences as a League of Legends player. Hope you keep climbing!</p>
